# gym-management-c

./: Makefile  Makefile.am  Makefile.in  centres.txt  config.h  config.status  configure  configure.in  entraineur.txt  evenement.txt  gym_app.glade.bak  gym_app.gladep.bak  inscription_event.txt  inscription_trainer_cours.txt
autom4te.cache/: output.0  requests  traces.0  traces.1
po/: Makefile  Makefile.in
src/: Makefile  Makefile.am  Makefile.in  callbacks.c  callbacks.h  centres.c  centres.h  entraineur.c  entraineur.h  hexzenith  interface.c  interface.c.bak  interface.h.bak  main.c  treeview.c  treeview.h
src/.deps/: callbacks.Po  centres.Po  entraineur.Po  treeview.Po
src/database/: centres.txt  cours.txt  entraineurprive.txt  entraineurs.txt  equipements.txt  events.txt  inscriptionentraineur.txt  membres.txt  user.txt
